--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <body>
     <div id="root"></div>
 
-    <script src="./third-party/twojs.dev.js"></script>
+    <script src="./third-party/two.js/twojs.dev.js"></script>
     <script src="./main.js"></script>
   </body>
 </html>
