Refactor to render with pixijs

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,24 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <style type="text/css">
+      html,
+      body {
+        padding: 0;
+        margin: 0;
+      }
+
+      canvas {
+        display: block;
+        position: absolute;
+      }
+    </style>
+  </head>
   <body>
     <div id="root"></div>
 
     <script src="./third-party/two.js/twojs.dev.js"></script>
+    <script src="./third-party/pixijs/pixi.min.js"></script>
     <script src="./main.js"></script>
   </body>
 </html>
